# x

./: README.md  pyproject.toml  summary.py
arxiv-news/: README.md  clean.py  pyproject.toml  titles.fish  titles.py
arxiv-news/html/: .htmlvalidate.json  eslint.config.mjs  index.html  package-lock.json  package.json  script.js
arxiv-news/src/arxiv_news/: titles.py
asap-review/: README.md  README.original.md  merge.py  pyproject.toml
cchs/: Justfile  README.md
cchs/docs/specs/: 2026-03-24-cchs-design.md
cchs/src/cchs/: display.py  indexer.py  log_config.py  models.py
cchs/tests/: test_cli.py  test_indexer.py  test_models.py  test_project.py
cchs/tests/fixtures/: simple_conversation.jsonl
claude-search-tool/: .gitignore  README.md  pyproject.toml
claude-search-tool/src/cchs/: __init__.py  cli.py  indexer.py  parser.py  project.py  searcher.py  skill.py  utils.py
claude-search-tool/tests/: test_indexer.py  test_parser.py  test_searcher.py
claude-search-tool/tests/fixtures/: mixed_types.jsonl
concert-email/: README.md  process_email.py
cosy/: README.md  pyproject.toml
cosy/src/cosy/: cli.py  code_size.py  compare.py  count_items.py  find_base_models.py  find_default_args.py  find_imports.py  find_untyped_return.py  list_funcs.py  list_public_items.py  match_deps.py
firefox-archive/: .gitignore  archive.py  audit.py  main.py  pyproject.toml
gigs-in-town/: README.md  pyproject.toml
gigs-in-town/src/gigs_in_town/: cli.py
gitbackup/: .gitignore  README.md  backup.py  pyproject.toml
het/: README.md  het.fish  het.nu
imgexp/: README.md  img.py  pyproject.toml
jargs/: Cargo.toml
jargs/src/: main.rs
paca/: .gitignore  Justfile  README.md  SPEC.md  STYLE.md  pyproject.toml
paca/src/paca/: __init__.py  calendar_provider.py  config.py  extractor.py  input_capture.py  oauth_client.py  schema.py
paca/src/paca/_shed/: __init__.py  google.py
paca/src/paca/ui/: __init__.py  app.py  confirm_modal.py  file_input_screen.py  home_screen.py  paste_screen.py  review_screen.py  success_screen.py
paca/tests/: test_calendar_provider.py  test_cli.py  test_config.py  test_extractor.py  test_init.py  test_input_capture.py  test_schema.py
parch/: CLAUDE.md  Justfile  SPEC.md  main.py  pyproject.toml
parch/parch/: __init__.py  archive.py  cli.py  config.py  display.py  models.py  pueue.py  sync.py  typing.py
parch/src/parch/: config.py  display.py  pueue.py  sync.py
parch/tests/: test_cli.py  test_display.py  test_models.py  test_pueue.py  test_typing.py
process-email/: concert_rules.py  concerts.py  process_email.py  pyproject.toml
py-summary/: README.md  pyproject.toml  summary.py
py-summary/src/py_summary/: summary.py
random/: README.md  countsymbols.go  docstrings.py  dq.py  find_forelse.py  gitdaily.nu  gzjson.py  jhead.go  keymatch.py  markdown_word_counter.go  mdtable.py  memtree  migrate_mise_tools.py  myrepos.py  pathbins.nu  pax.py  petals.py  ping.py  projectlang.py  pueue-move.py  pyproj.py  pyproject.toml  scores.py  sshfwd.nu  text_metrics.py
rblame/: Cargo.toml  README.md
rblame/src/: main.rs
s2orc/: README.md  acl.py  acl_papers.py  datasets.py  download_s2orc.py  filesizes.py  get_venues.py  match_venues.py  process_s2orc.py  pyproject.toml  unique_venues.fish  unique_venues.py
s2orc-ng/: .gitignore  CLAUDE.md  Justfile  README.md  SPEC.md  api.py  async_utils.py  config.py  datasets.py  download.py  download_pdfs.py  download_supervisor.py  extract.py  filter_s2orc.py  main.py  pipeline.py  plot.py  pyproject.toml
s2orc-ng/.plans/: step1.md
s2orc-ng/tests/: test_api.py  test_download.py
samples/: README.md  argenum.py  markdown_word_counter.go
sandbox/: .gitignore  CLAUDE.md  Dockerfile  README.md  bootstrap-root.sh  install-nushell.sh  install.sh  mise.toml  packages.txt  sandbox.py  setup-remote.sh  setup.sh  test.fish
sandbox/config/: config.fish  dot_tmux.conf  mise.toml  tmux.conf  vimrc
sandbox/config/conf.d/: jj.fish
sandbox/config/dot_claude/: settings.json
sandbox/config/dot_config/fish/: config.fish  fish_variables
sandbox/config/dot_config/fish/conf.d/: env_vars.fish  jj.fish
sandbox/config/dot_config/fish/functions/: fish_user_key_bindings.fish
sandbox/config/dot_config/jj/: config.toml
sandbox/config/dot_config/mise/: config.toml
sandbox/config/dot_config/nvim/: init.vim
sandbox/config/fish/: config.fish
sandbox/config/fish/conf.d/: env_vars.fish  jj.fish
sandbox/config/fish/functions/: rg.fish
sandbox/config/functions/: ,jq.fish
sandbox/config/nvim/: init.vim
sandbox/config/nvim/lua/: config.lua
sandbox/nix/: README.md  bootstrap.sh  flake.nix  home.nix
sandbox/nix/config/fish/: config.fish
sandbox/nix/config/nvim/: git.lua
sandbox/nix/config/tmux/: tmux.conf
sandbox/nix/modules/: fish.nix  git.nix  neovim.nix  packages.nix  starship.nix  tmux.nix
scripts/: README.md  pyproject.toml
scripts/src/scripts/: blame.py  confusion_matrix.py  count_hf_tokens.py  estimate_tokens.py  extsize.py  getschema.py  json_freq.py  json_head.py  json_keys.py  json_shuf.py  json_to_table.py  listdir.py  readtable.py  rename_json.py  tg_notify.py  toggle_theme.py
sexp-rs/: Cargo.toml  Justfile  config.json  spec.dsl  spec.md
sexp-rs/example/: tasks.dsl
sexp-rs/src/: main.rs
trem/: CLAUDE.md  Cargo.toml  README.md
trem/src/: blame.rs  jargs.rs  jhead.rs  main.rs
uai/: .gitignore  Justfile  README.md  pyproject.toml  test.json
uai/.claude/: CLAUDE.md
uai/src/uai/: blame.py  cli.py  cloc.py  confusion_matrix.py  count_hf_tokens.py  estimate_tokens.py  extsize.py  getschema.py  json_freq.py  json_head.py  json_keys.py  json_rename.py  json_shuf.py  json_to_table.py  listdir.py  readtable.py  repomap.py  tablefmt.py  tg_notify.py  toggle_theme.py  util.py
uai/tests/: test_tablefmt.py
webster1913/: README.md  pyproject.toml  search.py
weekly-calendar/: .gitignore  Cargo.toml  Justfile  README.md  go.mod  main.go
weekly-calendar-rs/: Cargo.toml
weekly-calendar/src/: main.rs
zincmind/: .gitignore  README.md  pyproject.toml  summary.py
(+17 files in other folders)
