[project]
name = "cosy"
version = "0.2.0"
description = "Utilities to analyse Python code"
readme = "README.md"
authors = [
    { name = "Italo Silva", email = "italo@maleldil.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9.2",
    "rich>=13.9.3",
    "typer>=0.12.5",
]
license = {text = "GPL-3.0-or-later"}

[project.scripts]
cosy = "cosy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "ISC",
    "N",
    "PL",
    "RUF",
    "SIM",
    "TRY",
    "UP",
    "W",
    "ERA"
]
ignore = [
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "E501",     # Line too long (let ruff format take care of this)
    "TRY003",   # Long messages outside exception class
    "SIM108",   # Use ternary operation instead of if-else block
    "ISC001"    # Incompatible with the formatter
]

[tool.pyright]
# Ruff also handles this, and it needs to be enabled there for fixAll to fix it,
# so we disable it here to avoid duplicate errors
reportUnusedImport = false
typeCheckingMode = "strict"
