[project]
name = "s2orc-ng"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.7",
    "plotly>=6.5.0",
    "plotly-stubs>=0.0.6",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
select = ["ALL"]
# I try to enable as many reasonable rules as possible, but sometimes it's too much:
ignore = [
    "FIX",      # Allow FIX/TODO/XXX comments.
    "TD",       # Allow TODO comments without author/link
    "COM",      # Let ruff take care of trailing commas
    "T",        # Allow print
    "FLY",      # Allow static string joins
    "FBT",      # Allow positional boolean arguments
    "EM",       # Exception messages with literals/f-strings
    "A",        # Allow shadowing built-ins
    "ARG",      # Allow unused arguments
    "BLE",      # Allow blind excepts
    #
    "ANN401",   # Allow usage of Any
    "B905",     # `zip` without `strict`
    "C901",     # "too complex" functions
    "D107",     # Allow no docstring in __init__
    "D202",     # Empty lines between function docstring and body
    "E501",     # Line too long (let ruff format take care of this)
    "G004",     # f-strings in logging
    "ISC001",   # Incompatible with the formatter
    "PERF401",  # Manual list comprehensions
    "PGH003",   # Allow blanket type: ignore statements
    "PLC0206",  # Dictionary iteration without items
    "PLC0414",  # Allow redundant alias to re-export items
    "PLR0911",  # Too many return statements
    "PLR0912",  # Too many branches
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison
    "PTH123",   # Allow `open(p)` instead of `Path(p).open`
    "RET505",   # Allow `else` after `return`. I like this symmetry in some cases.
    "S101",     # Allow assert
    "S110",     # try/except/pass
    "S113",     # Request without timeout
    "S311",     # Allow regular `random.Random` (not crypto safe, but that's fine)
    "S603",     # Allow subprocess with 'untrusted' input
    "S607",     # Allow subprocess with relative path (usually `uv run`)
    "SIM108",   # Use ternary operation instead of if-else block
    "TC003",    # Allow stdlib imports outside of TYPE_CHECKING. This triggers some
                # false-positives because of how typer/pydantic interact with type hints,
                # especially with Path.
    "TC006",    # I don't want to quote `cast` arguments.
    "TRY003",   # Long messages outside exception class
    "PLC0415",  # Allow non-top-level imports. They're useful to avoid circular dependencies.
    "INP001",   # Allow "implicit" package for tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
reportUnusedImport = false
reportAttributeAccessIssue = false
typeCheckingMode = "strict"
