[package]
name = "sexp-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Italo Silva <italo@maleldil.com>"]
description = "Implementation of task running DSL"

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.27", features = ["derive"] }
regex = "1.11.1"
serde_json = "1.0.138"
thiserror = "2.0.11"
