[package]
name = "trem"
version = "0.0.2"
edition = "2021"
authors = ["Italo Silva <italo@maleldil.com>"]
license = "GPL-3.0-or-later"
description = "Utility tools"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
indicatif = "0.17.11"
rayon = "1.10.0"
regex = "1.11.1"
serde_json = "1.0.140"
