[package]
name = "weekly-calendar"
version = "0.1.1"
edition = "2021"
authors = ["Italo Silva <italo@maleldil.com>"]
license = "GPL-3.0-or-later"
description = "Print weekly calendar until deadline"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
